--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-
+/* 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -10,6 +10,6 @@
     h2 {
       @apply text-xl;
     }
-  }
+  } */
 
 
